--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
-		"@clerk/express": "^1.4.13",
+		"@clerk/express": "^1.5.2",
+		"clerk": "^0.8.3",
 		"cloudinary": "^2.6.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
